tests/invalid_tests/illegal_identifier_start.minijava
class IllegalId {
    public static void main() {
        int 123var = 42;
    }
}
